--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="status2">Ended</string>
 
 
+    <string name="api_key_v3" translatable="false">681b436ab539d57c9768f90081fc936b</string>
+
+
+
 </resources>
