--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="farm">Fed up with her father, a woman moves in with her older half-sister, and her fiancé.</string>
     <string name="goodOmens">Aziraphale, an angel, and Crowley, a demon, join forces to find the Antichrist and stop Armageddon.</string>
     <string name="status2">Ended</string>
+    <string name="title_rating">Ratings :  %1$s</string>
 </resources>
