--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -21,4 +21,5 @@
     <string name="farm">Muak dengan ayahnya, seorang wanita pindah dengan kakak tirinya, dan tunangannya.</string>
     <string name="status2">Selesai</string>
     <string name="goodOmens">Aziraphale, malaikat, dan Crowley, iblis, bergabung untuk menemukan Antikristus dan menghentikan Armageddon.</string>
+    <string name="title_rating">Peringkat :  %1$s</string>
 </resources>
