--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -25,4 +25,5 @@
     <string name="tab_text_1">Film</string>
     <string name="tab_text_2">Tv</string>
     <string name="title_activity_favorit">Favorit</string>
+    <string name="poster">Poster</string>
 </resources>
