--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="title_activity_favorit">Favorit</string>
     <string name="tab_text_1">Movie</string>
     <string name="tab_text_2">Tv</string>
+    <string name="poster">Poster</string>
 
 
 </resources>
