--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,4 +26,8 @@
     <string name="tab_text_2">Tv</string>
     <string name="title_activity_favorit">Favorit</string>
     <string name="poster">Poster</string>
+    <string name="agree">Yes</string>
+    <string name="disagree">No</string>
+    <string name="title_alert">Are Your Sure?</string>
+    <string name="your_message">Data Cannot Back!</string>
 </resources>
