--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -30,7 +30,9 @@
     <string name="disagree">No</string>
     <string name="title_alert">Are Your Sure?</string>
     <string name="your_message">Data Cannot Back!</string>
-    <string name="title_settings_reminder">Settings</string>
+    <string name="title_settings_reminder">Settings Reminder</string>
     <string name="search_title">Search</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="reminder_daily" translatable="false">Daily Reminder</string>
+    <string name="reminder_release" translatable="false">New Release Reminder</string>
 </resources>
