--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,4 +35,5 @@
     <string name="title_activity_settings">Settings</string>
     <string name="reminder_daily" translatable="false">Daily Reminder</string>
     <string name="reminder_release" translatable="false">New Release Reminder</string>
+    <string name="appwigetText">Movie Favorit</string>
 </resources>
