--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -35,4 +35,5 @@
     <string name="title_activity_settings">Pengaturan</string>
     <string name="reminder_daily" translatable="false">Pemberitahuan Harian</string>
     <string name="reminder_release" translatable="false">Pemberitahuan Film Terbaru</string>
+    <string name="appwigetText">Film Kesukaan</string>
 </resources>
